--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
     "@ledhed2222/ripple-lib": "^1.12.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
     "ripple-keypairs": "^1.0.3",
     "typescript": "^4.4.2",
