--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@xrplf/eslint-config": "^1.3.0",
     "@xrplf/prettier-config": "^1.2.0",
     "axios": "^0.21.4",
+    "jdenticon": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
