--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "jdenticon": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
