--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.21.4",
     "jdenticon": "^3.1.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.3.0",
