--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@xrplf/eslint-config": "^1.3.0",
     "@xrplf/prettier-config": "^1.2.0",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "jdenticon": "^3.1.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
