--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@ledhed2222/ripple-lib": "^1.13.1",
     "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -40,7 +39,8 @@
     "react-transition-group": "^4.4.2",
     "ripple-keypairs": "^1.0.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xrpl": "^2.1.1"
   },
   "prettier": "@xrplf/prettier-config",
   "proxy": "https://localhost:3000",
