--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/ledhed2222/nftdemo/issues"
   },
   "engines": {
+    "node": ">=16.0.0",
     "npm": ">=7.0.0"
   },
   "scripts": {
